fixing sider bar, nav collapse

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,6 @@
+/*
+    DEMO STYLE
+*/
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
@@ -19,6 +22,10 @@ a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
+}
+
+nav {
+    height: auto;
 }
 
 .navbar {
@@ -66,8 +73,8 @@ span {
 }
 
 #sidebar.active {
-    min-width: 100px;
-    max-width: 100px;
+    min-width: 80px;
+    max-width: 80px;
     text-align: center;
 }
 
@@ -142,8 +149,8 @@ span {
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-    color: #7386D5;
-    background: #fff;
+    color: #fff;
+    background: #6d7fcc;
 }
 
 a[data-toggle="collapse"] {
@@ -204,8 +211,8 @@ a.article:hover {
 
 @media (max-width: 768px) {
     #sidebar {
-        min-width: 100px;
-        max-width: 100px;
+        min-width: 80px;
+        max-width: 80px;
         text-align: center;
         margin-left: -80px !important;
     }
